dev/2-gateway/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: polom-gateway
  namespace: default
  annotations:
    nginx.org/client-max-body-size: "10m"
spec:
  gatewayClassName: nginx
  listeners:
    - name: http
      protocol: HTTP
      port: 80
      allowedRoutes:
        namespaces:
          from: All
    - name: https
      protocol: HTTPS
      port: 443
      tls:
        mode: Terminate
        certificateRefs:
          - name: tls-cert-secret        # cert-manager secret and must be in the same namespace at the certificate
            kind: Secret
      allowedRoutes:
        namespaces:
          from: All
